--- a/main.html
+++ b/main.html
@@ -10,7 +10,10 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	
+<div id="container">
+	<p id="a">This is the main container element</p>
+</div>
 </body>
 
 </html>
