--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </script>
 	
 <div id="container">
-	<p id="a"> This is the main container element </p>
+	 This is the main container element 
 </div>
 </body>
 
